Rejigg about page, freshen up design a bit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section id="about">
   <header><h1><a href="/">Édouard Brière</a></h1></header>
-	<p>Hello, I’m a web developer and entrepreneur. I created <a href="https://webtranslateit.com">WebTranslateIt.com</a>.</p>
+	<p>Hi! I’m a web developer and entrepreneur. I created <a href="https://webtranslateit.com">WebTranslateIt.com</a>.</p>
 	<p>You can read more <a href="/about">about me</a>, and you can find me on <a href="https://twitter.com/edouardbriere">Twitter</a>,
 	<a href="https://github.com/edouard">Github</a> and <a href="mailto:edouard@atelierconvivialite.com">Email</a>.</p>
 	<hr>
