--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
   <header><h1><a href="/">Édouard Brière</a></h1></header>
 	<p>Hi! I’m a web developer and entrepreneur. I created <a href="https://webtranslateit.com">WebTranslateIt.com</a>.</p>
 	<p>You can read more <a href="/about">about me</a> and you can find me on <a href="https://twitter.com/edouardbriere">Twitter</a>,
-	<a href="https://github.com/edouard">Github</a> and <a href="mailto:edouard@atelierconvivialite.com">Email</a>.</p>
+	<a href="https://github.com/edouard">Github</a> and <a href="mailto:edouard.briere@gmail.com">Email</a>.</p>
 	<hr>
 </section>
 
